# pillguard-ai

./: CET_ General OTC List.md  README.md  app.py  pyproject.toml  requirements.txt  workflow_diagrams.md
src/: auth.py  config.py  extractor.py  graph.py  ingestion.py  memory.py  otc_data.py  otc_manager.py  utils.py  vector_store.py
tests/: test_otc_check.py
